force-app/main/default/objects/CV_Batch_Settings__mdt/CV_Batch_Settings__mdt.object-meta.xml
<CustomObject>
    <label>CV Batch Settings</label>
    <pluralLabel>CV Batch Settings</pluralLabel>
</CustomObject>