force-app/main/default/objects/CV_Batch_Settings__mdt/fields/Batch_Scope_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Scope_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <label>Batch Scope Size</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>