force-app/main/default/objects/CV_Batch_Settings__mdt/fields/Default_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Account_Id__c</fullName>
    <label>Default Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>