force-app/main/default/objects/CV_Batch_Settings__mdt/fields/Overrive_Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>Overrive_Recipient_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overrive Recipient Email</label>
    <type>Checkbox</type>
</CustomField>