force-app/main/default/objects/CV_Batch_Settings__mdt/fields/Paid_Email_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Paid_Email_Template_Id__c</fullName>
    <label>Paid Email Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>