force-app/main/default/objects/CV_Batch_Settings__mdt/fields/Retention_Period__c.field-meta.xml
<CustomField>
    <fullName>Retention_Period__c</fullName>
    <description>Période de retention en jours</description>
    <label>Retention Period</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>